--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title>支払いリンク</title>
+    </head>
     <body>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="B77TTM3U3T9AE">
-                <table>
-                <tr><td><input type="hidden" name="on0" value="申し込み時のconnpassのIDを入力してください。">申し込み時のconnpassのIDを入力してください。</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
-                </table>
-                <input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
-                <img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
-            </form>                
+        <a href="https://connpass.com/event/86410/" target="_blank">養老乃瀧ハッカソン2018</a>の支払いリンクです。
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="B77TTM3U3T9AE">
+            <table>
+            <tr><td><input type="hidden" name="on0" value="申し込み時のconnpassのIDを入力してください。">申し込み時のconnpassのIDを入力してください。</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+            </table>
+            <input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
+            <img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
+        </form>
+        支払いが完了すると参加者連絡用のFacebookグループに遷移するのでグループへの参加申請をしてください！
     </body>
 </html>
