--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
             <img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
         </form>
-        支払いが完了し、<strong>ショッピングサイトへ戻る</strong>を押すと、参加者連絡用のFacebookグループに遷移するのでグループへの参加申請をしてください！
+        <p>
+            支払いが完了し、<strong>ショッピングサイトへ戻る</strong>を押すと、参加者連絡用のFacebookグループに遷移するのでグループへの参加申請をしてください！
+        </p>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <p>connapss idとPayPal支払いひもづけたくて急遽作ったのでこのページのデザインプルリク出してくれる人いたら嬉しいなぁ</p>
     </body>
 </html>
