--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <br>
         <br>
 
-        <p>connapss idとPayPal支払いひもづけたくて急遽作ったので<a href="https://github.com/n0bisuke/shiharai" target="_blank">このページのデザインプルリク</a>出してくれる人いたら嬉しいなぁ</p>
+        <p>P.S. connapss idとPayPal支払いひもづけたくて急遽作ったので<a href="https://github.com/n0bisuke/shiharai" target="_blank">このページのデザインプルリク</a>出してくれる人いたら嬉しいなぁ</p>
     </body>
 </html>
