--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
         </form>
         <p>
-            支払いが完了し、<strong>ショッピングサイトへ戻る</strong>を押すと、参加者連絡用のFacebookグループに遷移するのでグループへの参加申請をしてください！
+            支払いが完了し、「<strong>ショッピングサイトへ戻る</strong>」を押すと、参加者連絡用のFacebookグループに遷移するのでグループへの参加申請をしてください！
         </p>
 
         <br>
